apps/base/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf

      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 3005

          securityContext: 
            allowPrivilegeEscalation: false

          volumeMounts:
            - name: audiobookshelf
              mountPath: /etc/audiobookshelf/data
      volumes:
        - name: audiobookshelf-data
          persistentVolumeClaim:
            claimName: audiobookshelf-data-pvc
